Added weekly test 3

--- a/Assignments/weekly_test_3.css
+++ b/Assignments/weekly_test_3.css
@@ -4,20 +4,25 @@
     box-sizing: border-box;
 }
 .div1{
-   background: linear-gradient(to right, black, brown);
-   padding-block: 10px;
-    text-align: center;
-   color: white;
+   background: linear-gradient(to right, #000000, #e74c3c);
+        color: white;
+        text-align: center;
+        padding-block: 10px;
 }
-nav{
-    background-color: black;
-    padding-block: 30px;
-    display: flex;
-    color: white;
+
+.navclass{
+    padding: 15px 20%;
     justify-content: center;
     justify-content: space-between;
-    
+    align-items: center;
+    background-color: black;
+    /* padding-block: 30px; */
+    display: flex;
+    color: white;
+    position: sticky;
+    top: 0;
 }
+
 .block3{
     background-image: url("./test_3_img1.jpg");
     background-position: center;
@@ -27,51 +32,103 @@ nav{
     color: white;
 }
 .div3{
-    background-color: rgb(0,0,0,0.7);
+    background-color: rgb(0,0,0,0.4);
     width: 70%;
     padding: 2%;
 }
 .block4{
-    background-color: rgb(229,229,229);
+   background-color: rgb(229,229,229);
    padding: 1% 5%;
-   height: 50vh;
-   
-    
+   /* height: 10%; */
+}
+.div4 h1{
+   padding-top: 10px;
+    margin-left: 10px;
 }
 .div4{
     background-color:rgb(160,160,160);
-    margin: 1%;
+    padding: 1%;
+    /* margin-bottom: 5px; */
+   margin-block: 10px;
 }
-.div5{
+/* .div5{
     display: flex;
-    margin-left: 8px;
-    margin-top: 20px;
-}
-#shoe1{
-    padding: 10px;
-    border-color: gray;
+    flex-direction: row; 
+    margin-left: 5px;
+    padding: 0.1%;
+    background-color: rgb(96,96,96);
+} */
+ .div5{
+    padding: 1%;
+        
+ }
+/* #shoe1{
+    margin: 5px;
 }
 #shoe2{
-    padding: 5px;
+    margin: 5px;
 }
 #shoe3{
-    padding: 5px;
+    margin:5px;
+} */
+.s1{
+    height: 150px;
+        width: 120px;
+        display: inline-block;
+        background-color: rgba(0, 0, 0, 0.4);
+        color: white;
+        padding: 0.1%;
+}
+.img1{
+    height: 80%;
+    width: 100%;
+}
+.para1{
+    height: 20%;
+    width: 100%;
+    background-color: rgb(96,96,96);
 }
 .block5{
     background: linear-gradient(to right, gray,black);
-    padding-block: 300px;
-    text-align: center;
-    color: white;
-    /* height: 200px; */
-    
+    height: 92vh;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
 }
 .div6{
-    background-image: linear-gradient(to right, black,B73C30);
-    /* height:  200px; */
-    padding-block: 100px;
+    background: linear-gradient(to right, black,#B73C30);
+    height: 75%;
+    width: 85%;
+    padding: 2%;
+    margin: auto;
+    margin-top: 7.5%;
+    color: white;
+    box-shadow: 0px 0px 10px gray;
+    display: flex;
+    justify-content: space-between;
+}
+.content{
+    max-width: 40%;
     color: white;
 }
-.img{
-    position: relative;
-    box-shadow: 20PX20PX;
+.content h1{
+    margin-bottom: 30px;
+    font-size: xx-large;
+}
+.content p{
+    line-height: 20px;
+    margin-bottom: 50px;
+    font-size: large;
+}
+.shoeimg{
+    height: 300px;
+    width: 300px;
+    border-radius: 150px;
+    box-shadow: 8px 8px 8px white;
+}
+.shoeimg:hover{
+    height: 400px;
+    width: 400px;
+    border-radius: 200px;
+    box-shadow: 10px 10px 15px white;
 }
